--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "locus": "^2.0.1",
     "mongoose": "^4.13.7",
     "morgan": "^1.9.0"
   }
